test/fail/classes/invalid_class_name.lly
#[
SyntaxError: 'A' is not a valid class name (too short).
    from invalid_class_name.lly:6
]#

class A() {}
